<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="activity_name">Clip to Evernote</string>
    <string name="settings_name">twicca Evernote Plugin</string>
    <string name="dialog_title">Clipping</string>
    <string name="dialog_message">Clipping to Evernote...</string>
    <string name="dialog_label">Select Notebook and Tags.</string>
    <string name="confirm_clip">Confirm clipping</string>
    <string name="notebook">Notebook:</string>
    <string name="tags">Tags:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="app_name">twicca Evernote plugin</string>
    <string name="pref_evernote_settings_title">Evernote settings</string>
    <string name="pref_authentication">Authenticate</string>
    <string name="summary_authentication">Authenticate via OAuth</string>
    <string name="pref_auth_authed">Authenticated</string>
    <string name="summary_auth_authed">tap to logout</string>
    <string name="pref_evernote_notebook">Notebook</string>
    <string name="pref_evernote_tags">Tags</string>
    <string name="pref_confirm_dialog">Show confirm dialog</string>
    <string name="pref_hashtag_cliptag">Add hashtags as tag</string>
    <string name="pref_name_cliptag">Add owner\'s screen name as tag</string>
    <string name="summary_confirm_dialog">Show confirm dialog before clip</string>
    <string name="summary_hashtag_cliptag">All hashtags in a tweet will be added as clip tag</string>
    <string name="summary_name_cliptag">Screen name of a tweet owner will be added as clip tag</string>
    <string name="pref_misc_title">Misc settings</string>
    <string name="account_warning">Please setup Evernote account</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_oauth_required">OAuth required</string>
    <string name="message_oauth_required">OAuth authentication can be done in Settings screen, do it now?</string>
    <string name="message_setup_api">Setting up Evernote API&#8230;</string>
    <string name="message_clipped">Clipped.</string>
    <string name="message_error_auth">Error: Failed to authenticate.</string>
    <string name="message_error_unknown">Error: Something is wrong, maybe a Bug</string>
    <string name="message_error_api">Error: Failed to setup API, maybe a Bug</string>
    <string name="message_error_server">Error: Failed to connect to Evernote server</string>
    <string name="message_error_version">Error: Protocol version mismatching</string>
    <string name="message_do_background">Clipping in background</string>
    <string name="new_or_default">[Enter or default]</string>
    <string name="hint_notebook">Enter a notebook name</string>
    <string name="update_cache">Update cache</string>
    <string name="authentication">Authentication&#8230;</string>
    <string name="getting_data">Getting notebooks and tags&#8230;</string>
    <string name="retry">retry</string>
    <string name="hint_empty">default notebook</string>
    <string name="auth_expired">OAuth expired</string>
    <string name="message_auth_expired">OAuth token has been expired, please authorize again.</string>
</resources>
