<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/layout_root"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="10dp">
    <TextView android:layout_width="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:id="@+id/dialog_label"
     android:layout_height="wrap_content"
     android:text="@string/dialog_label" />
    <TextView android:text="@string/notebook"
     android:id="@+id/textView1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
    <Spinner android:layout_width="fill_parent"
     android:id="@+id/notebook_list"
     android:layout_height="wrap_content" />
    <EditText android:layout_width="fill_parent"
     android:id="@+id/edit_notebook"
     android:layout_height="wrap_content" />
    <TextView android:text="@string/tags"
     android:id="@+id/textView2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
    <MultiAutoCompleteTextView
     android:id="@+id/edit_tags" 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" />
</LinearLayout>
